<?xml version="1.0"?>
<package format="2">
  <name>urdf_tut</name>
  <version>0.0.0</version>
  
  <description>The urdf_tut package</description>

  <maintainer email="sasipriya@todo.todo">sasipriya</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  


</package>
  

  